# physical-simulation-opengl

./: .gitignore  CMakeLists.txt
includes/: glad.c
mass_spring/: README.md  main.cpp  physics.h
mass_spring/shaders/: fragment.fs  vertex.vs
src/3d_fem/: README.md  gradient.h  hessian.h  main.cpp  physical_mesh.h  physics.h
src/3d_fem/mesh/: bunny_tet.msh
src/3d_fem/shaders/: fragment.fs  trivial.fs  trivial.vs  vertex.vs
src/mass_spring/: main.cpp  physics.h
src/mass_spring/shaders/: fragment.fs  vertex.vs
src/physical_simulation/: main.cpp
src/utils/: camera.h  draw_shapes.h  shader.h
utils/: camera.h  draw_shapes.h  shader.h
